fix the alignment issue

--- a/space-tourism/css/space.css
+++ b/space-tourism/css/space.css
@@ -525,7 +525,7 @@ body {
   padding-bottom: 4rem;
 }
 
-.grid-container * {
+.grid-container p:not([class]) {
   max-width: 50ch;
 }
 
@@ -614,7 +614,7 @@ body {
   }
 
   .destination-meta {
-    --gap: 6rem;
+    --gap: min(6vw, 6rem);
     justify-content: start;
   }
 
